# shio

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/themes/: catppuccin.toml  dark.toml  dawn.toml  github-dark.toml  light.toml  rose-pine.toml  zen.toml
assets/windows/: shio.manifest
crates/shio-app/: Cargo.toml  build.rs
crates/shio-app/src/: clipboard.rs  diagnostics.rs  main.rs  message.rs  platform.rs  tray.rs
crates/shio-app/src/app/: add_model.rs  mod.rs  notification.rs  sort.rs  state.rs  subscription.rs  theme.rs  vibrancy.rs  view.rs
crates/shio-app/src/app/update/: dialogs.rs  downloads.rs  dragdrop.rs  keyboard.rs  mod.rs  progress.rs  search.rs  settings.rs  window.rs
crates/shio-app/src/platform/: associations.rs
crates/shio-app/src/search/: mod.rs
crates/shio-app/src/style/: button.rs  container.rs  control.rs  input.rs  mod.rs  palette.rs  row.rs  toast.rs
crates/shio-app/src/theme/: mod.rs
crates/shio-app/src/views/: add_dialog.rs  confirm_cancel.rs  confirm_delete.rs  download_list.rs  edit_dialog.rs  mod.rs  password_dialog.rs  search_dropdown.rs  settings.rs  status_bar.rs  tab_bar.rs  titlebar.rs  welcome.rs
crates/shio-app/src/widgets/: download_row.rs  download_status.rs  mod.rs
crates/shio-app/wix/: License.rtf  main.wxs
crates/shio-core/: Cargo.toml  build.rs
crates/shio-core/src/: chunk.rs  config.rs  engine.rs  error.rs  extract.rs  filename.rs  format.rs  lib.rs  path.rs  probe.rs  queue.rs  torrent.rs  types.rs  worker.rs
crates/shio-core/src/db/: codec.rs  mod.rs  row.rs  schema.rs
crates/shio-core/src/engine/: command.rs  db_writer.rs  slot.rs
crates/shio-core/src/torrent/: selection.rs  session.rs
crates/shio-core/tests/: download_e2e.rs  engine.rs  http_preview.rs  torrent_e2e.rs
