[workspace]
members = ["crates/shio-core", "crates/shio-app"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/offs/shio"
homepage = "https://github.com/offs/shio"
authors = ["offs"]

[workspace.dependencies]
librqbit = "8.1.1"
iced = { version = "0.14.0", default-features = false }
iced_aw = { version = "0.13.1", default-features = false }
iced_drop = { version = "0.2.23", default-features = false, features = ["helpers"] }
iced_fonts = { version = "0.3.0", features = ["bootstrap"] }

tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros", "fs", "io-util", "net", "sync", "time", "signal"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["rt"] }
futures = "0.3.32"

reqwest = { version = "0.13.2", default-features = false, features = [
    "stream",
    "cookies",
    "socks",
    "rustls",
] }

rusqlite = { version = "0.39.0", features = ["bundled"] }
parking_lot = "0.12.5"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.2"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

thiserror = "2.0.18"

uuid = { version = "1.23.0", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
url = { version = "2.5.8", features = ["serde"] }
bytesize = "2.3.1"
nucleo-matcher = "0.3.1"
regex = "1.12.3"
directories = "6.0.0"
async-trait = "0.1.89"
open = "5.3.3"

zip = { version = "2.4.2", default-features = false, features = ["deflate", "deflate64", "lzma", "zstd"] }
sevenz-rust2 = { version = "0.17.1", features = ["compress"] }
tar = "0.4.45"
flate2 = "1.1.9"
zstd = "0.13.3"
unrar = "0.5.8"

notify-rust = "4.15.0"
rfd = "0.17.2"
arboard = "3.6.1"
image = { version = "0.25.9", default-features = false, features = ["png"] }
tray-icon = "0.22.0"
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Security", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry"] }
winresource = "0.1.31"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
struct_excessive_bools = "allow"
option_if_let_else = "allow"
significant_drop_tightening = "allow"
redundant_pub_crate = "allow"
float_cmp = "allow"
