[package]
name = "shio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "download engine"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
bytesize = { workspace = true }
regex = { workspace = true }
directories = { workspace = true }
async-trait = { workspace = true }
librqbit = { workspace = true }

zip = { workspace = true }
sevenz-rust2 = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
unrar = { workspace = true }

[dev-dependencies]
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
